<resources>
    <string name="app_name">HkFactoryJohnCampusano</string>
    <string name="customer_name">Cliente</string>
    <string name="seller">Emisor</string>
    <string name="count">Cantidad de productos</string>
    <string name="total_Mount">Monto total</string>
    <string name="product">Nombre del producto</string>
    <string name="welcome_words">Bienvenid@ a Hk Demo. Esta app le permite generar ventas de productos con comprobantes fiscales. Elija una de las opciones a continuacion para continuar.</string>
    <string name="start_sell">Iniciar venta</string>
    <string name="see_sells">Ver historial de ventas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customerNameHint">Nombre completo del cliente</string>
    <string name="customer_last_name">Apellido cliente</string>
    <string name="et_Vat_Id">RNC o cedula del cliente</string>
    <string name="back">Atras</string>
    <string name="next">Siguiente</string>
    <string name="seller_name">Razón social del suplidor</string>
    <string name="et_ncf">NCF</string>
    <string name="product_code">Codigo</string>
    <string name="product_name">Nombre del producto</string>
    <string name="productPrice">Precio</string>
    <string name="business_name">Razón social</string>
    <string name="customer_name_field">Nombre del cliente:</string>
    <string name="vat_id_field">RNC o Cedula:</string>
    <string name="vat_id">RNC o Cedula</string>
    <string name="vat_number">NCF</string>
    <string name="minus_text">-</string>
    <string name="count_edit_text">0</string>
    <string name="plus">+</string>
    <string name="item_name">Nombre del item</string>
    <string name="quantity_item">Cantidad por item</string>
    <string name="item_code">Codigo del item</string>
    <string name="subtotal_item">Subtotal item</string>
    <string name="generate">Generar</string>
    <string name="subtotal_field">Subtotal:</string>
    <string name="subtotal">Subtotal</string>
    <string name="add_to_cart">Añadir al carrito</string>
    <string name="trash_description">Trash icon</string>
    <string name="title">title</string>
    <string name="greetings_string">Gracias por utilizar nuestros servicios, esperamos volverle a ver pronto</string>
    <string name="finish">Finalizar</string>
</resources>