<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_margin="12dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:contentPadding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="201dp"
            android:layout_height="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCustomerName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/customer_name"
                android:textColor="#757575"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSeller"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/seller"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotalMount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_Mount"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>