<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customerFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.fragments.CustomerFragment">


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCustomerName"
        android:layout_margin="55dp"
        android:hint="@string/customerNameHint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRncId"
        android:layout_margin="55dp"
        android:hint="@string/et_Vat_Id"
        app:layout_constraintTop_toBottomOf="@id/etCustomerName"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSeller"
        android:layout_margin="55dp"
        android:hint="@string/seller_name"
        app:layout_constraintTop_toBottomOf="@id/etRncId"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spNcf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etNCf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSeller" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNCf"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:hint="@string/et_ncf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="@id/spNcf"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spNcf"
        app:layout_constraintTop_toBottomOf="@+id/etSeller"
        app:layout_constraintVertical_bias="0.35" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackCustomerPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="224dp"
        android:text="@string/back"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRncId" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNextPurchasePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:background="@color/purple_200"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBackCustomerPage"
        app:layout_constraintTop_toBottomOf="@+id/etRncId" />
</androidx.constraintlayout.widget.ConstraintLayout>